--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -5017,6 +5017,105 @@
 	year = "2012"
 }
 
+@INCOLLECTION{
+	   Reed2012CAD,
+	title = "Combining Automatic Differentiation Methods for High-Dimensional Nonlinear Models",
+	doi = "10.1007/978-3-642-30023-3_3",
+	author = "Reed, James A. and Utke, Jean and Abdel-Khalik, Hany S.",
+	pages = "23--33",
+	crossref = "Forth2012RAi",
+	booktitle = "Recent Advances in Algorithmic Differentiation",
+	series = "Lecture Notes in Computational Science and Engineering",
+	publisher = "Springer",
+	address = "Berlin",
+	volume = "87",
+	editor = "Shaun Forth and Paul Hovland and Eric Phipps and Jean Utke and Andrea Walther",
+	isbn = "978-3-642-30022-6",
+	issn = "1439-7358",
+	year = "2012",
+	ad_area = "Uncertainty Analysis",
+	ad_tools = "OpenAD, Rapsodia",
+	ad_theotech = "Higher Order, Reverse Mode"
+}
+
+@INCOLLECTION{
+	   Mametjanov2012CAD,
+	title = "Combining Automatic Differentiation Methods for High-Dimensional Nonlinear Models",
+	doi = "10.1007/978-3-642-30023-3_5",
+	author = "Mametjanov, Azamat and Norris, Boyana and Zeng, Xiaoyan and Drewniak, Beth and Utke,
+	   Jean and Anitescu, Mihai and Hovland, Paul",
+	pages = "47--57",
+	crossref = "Forth2012RAi",
+	booktitle = "Recent Advances in Algorithmic Differentiation",
+	series = "Lecture Notes in Computational Science and Engineering",
+	publisher = "Springer",
+	address = "Berlin",
+	volume = "87",
+	editor = "Shaun Forth and Paul Hovland and Eric Phipps and Jean Utke and Andrea Walther",
+	isbn = "978-3-642-30022-6",
+	issn = "1439-7358",
+	year = "2012",
+	ad_tools = "OpenAD"
+}
+
+@INCOLLECTION{
+	   Mametjanov2012AAD,
+	title = "Applying Automatic Differentiation to the Community Land Model",
+	doi = "10.1007/978-3-642-30023-3_5",
+	author = "Mametjanov, Azamat and Norris, Boyana and Zeng, Xiaoyan and Drewniak, Beth and Utke,
+	   Jean and Anitescu, Mihai and Hovland, Paul",
+	pages = "47--57",
+	crossref = "Forth2012RAi",
+	booktitle = "Recent Advances in Algorithmic Differentiation",
+	series = "Lecture Notes in Computational Science and Engineering",
+	publisher = "Springer",
+	address = "Berlin",
+	volume = "87",
+	editor = "Shaun Forth and Paul Hovland and Eric Phipps and Jean Utke and Andrea Walther",
+	isbn = "978-3-642-30022-6",
+	issn = "1439-7358",
+	year = "2012",
+	ad_tools = "OpenAD"
+}
+
+@INCOLLECTION{
+	   Cole-Mullen2012SVR,
+	title = "Storing Versus Recomputation on Multiple {DAG}s",
+	doi = "10.1007/978-3-642-30023-3_18",
+	author = "Cole-Mullen, Heather and Lyons, Andrew and Utke, Jean",
+	pages = "197--207",
+	crossref = "Forth2012RAi",
+	booktitle = "Recent Advances in Algorithmic Differentiation",
+	series = "Lecture Notes in Computational Science and Engineering",
+	publisher = "Springer",
+	address = "Berlin",
+	volume = "87",
+	editor = "Shaun Forth and Paul Hovland and Eric Phipps and Jean Utke and Andrea Walther",
+	isbn = "978-3-642-30022-6",
+	issn = "1439-7358",
+	year = "2012",
+	ad_tools = "OpenAD"
+}
+
+@INCOLLECTION{
+	   Chen2012AIP,
+	title = "An Integer Programming Approach to Optimal Derivative Accumulation",
+	doi = "10.1007/978-3-642-30023-3_20",
+	author = "Chen, Jieqiu and Hovland, Paul and Munson, Todd and Utke, Jean",
+	pages = "221--231",
+	crossref = "Forth2012RAi",
+	booktitle = "Recent Advances in Algorithmic Differentiation",
+	series = "Lecture Notes in Computational Science and Engineering",
+	publisher = "Springer",
+	address = "Berlin",
+	volume = "87",
+	editor = "Shaun Forth and Paul Hovland and Eric Phipps and Jean Utke and Andrea Walther",
+	isbn = "978-3-642-30022-6",
+	issn = "1439-7358",
+	year = "2012",
+	ad_tools = "OpenAD"
+}
+
 @INPROCEEDINGS{
 	   Abate1997AaD,
 	author = "Jason Abate and Christian Bischof and Alan Carle and Lucas Roh",
@@ -23004,5 +23103,34 @@
 	year = "2012",
 	ad_area = "General",
 	ad_theotech = "graph coloring"
+}
+
+@ARTICLE{
+	   Utke2013SAf,
+	title = "Sensitivity Analysis for Mixed-Language Numerical Models",
+	journal = "Procedia Computer Science",
+	volume = "18",
+	number = "0",
+	pages = "1794 - 1803",
+	year = "2013",
+	note = "2013 International Conference on Computational Science",
+	issn = "1877-0509",
+	doi = "http://dx.doi.org/10.1016/j.procs.2013.05.348",
+	url = "http://www.sciencedirect.com/science/article/pii/S1877050913004912",
+	author = "Jean Utke and Bradley T. Rearden and Robert A. Lefebvre",
+	ad_tools = "Rapsodia"
+}
+
+@INPROCEEDINGS{
+	   Reed2012LRA,
+	title = "Low Rank Approach to Computing First and Higher Order Derivatives Using Automatic
+	   Differentiation",
+	author = "James Reed and Hany S. Abdel-Khalik and Jean Utke",
+	publisher = "American Nuclear Society",
+	year = "2012",
+	booktitle = "Proceedings of PHYSOR 2012 &#8211; Advances in Reactor Physics, Knoxville,
+	   Tennessee, USA, April 15-20",
+	url = "http://www.osti.gov/scitech/servlets/purl/22105784",
+	ad_tools = "OpenAD, Rapsodia"
 }
 
